test_suite/alan-2022-examples/failing/002210_mutation.alan
source R begin get U4Saa[9 end] end
